# SystemDash

./: .gitignore  Cargo.toml  README.md  build
.github/: release.yml
.github/workflows/: apple-release.bak  apple-release.yml  linux-release.bak  linux-release.yml.bak  main.yml  release.yml
builder/: build.c  functions.c  functions.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: style.css
frontend/src/components/: CpuGraph.vue  DiskGraph.vue  MemoryGraph.vue  SysInfo.vue  System.vue
frontend/src/components/charts/: gaugeChart.vue
frontend/src/layouts/: DefaultLayout.vue  ErrorLayout.vue
frontend/src/router/: routes.js
frontend/src/utils/: index.js
frontend/src/views/: Index.vue
src/: main.rs
src/models/: cpu.rs  disk.rs  disk_usage.rs  memory.rs  mod.rs  primary.rs  process.rs  sys_info.rs
src/routes/: info.rs
