[package]
name = "SystemDash"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = { version = "0.34.2", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"